# server_presentacion_funcional

./: NOTAS.md  Presentacion Seminario.odp  README.md
backend/: Dockerfile  pyproject.toml
backend/backend/: server.py
backend/backend/templates/: 1-7.html  1-to-5.html  6-to-9.html  8-14.html  button-note.html  piano.html  test-button.html  test.html
