[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Martin Gonzalez Perna <mgonzalezperna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
server = "backend.server:serve"
